@@ -2738,7 +2738,7 @@ const BUILT_IN commands[] = {
   "AlarmClock", "Prompt for a length of time and start an alarm clock",
   "CancelAlarm","Cancels an alarm",
   "Action", "Executes an action for the active window (same as in keymap)",
-  "Notification", "Shows a notification on screen, specify header, then message, and an optional icon, and optional time in milliseconds.",
+  "Notification", "Shows a notification on screen, specify header, then message, and optionally time in milliseconds and a icon.",
   "PlayDVD"," Plays the inserted CD or DVD media from the DVD-ROM Drive!",
   "Skin.ToggleSetting"," Toggles a skin setting on or off",
   "Skin.SetString"," Prompts and sets skin string",
@@ -3222,9 +3222,9 @@ int CUtil::ExecBuiltIn(const CStdString& execString)
     if (params.size() < 2)
       return -1;
     if (params.size() == 4)
-      g_application.m_guiDialogKaiToast.QueueNotification(params[2],params[0],params[1],atoi(params[3].c_str()));
+      g_application.m_guiDialogKaiToast.QueueNotification(params[3],params[0],params[1],atoi(params[2].c_str()));
     else if (params.size() == 3)
-      g_application.m_guiDialogKaiToast.QueueNotification(params[2],params[0],params[1]);
+      g_application.m_guiDialogKaiToast.QueueNotification("",params[0],params[1],atoi(params[2].c_str()));
     else
       g_application.m_guiDialogKaiToast.QueueNotification(params[0],params[1]);
   }
